# achronus.dev

./: .gitignore  astro.config.mjs  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
backend/: pyproject.toml
backend/app/: main.py  utils.py
backend/app/api/auth/: __init__.py
backend/app/conf/: __init__.py  settings.py
backend/app/schemas/: __init__.py
backend/db/supabase/: __init__.py  base.py  bearer.py  deps.py  settings.py  storage.py  table.py  user.py
frontend/: package-lock.json  package.json  tailwind.config.mjs
frontend/src/: utils.ts
frontend/src/components/: BackToTop.astro  Link.astro  Logo.astro  ScrollToTop.tsx  Sidebar.tsx  SocialButton.astro  Svg.tsx  TechStack.tsx
frontend/src/content/: about.md
src/: App.css  App.tsx  utils.ts
src/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
src/components/: About.tsx  BasicHero.tsx  Description.tsx  Equation.tsx  Figure.tsx  Icon.tsx  IconArray.tsx  IconCard.tsx  ListItems.tsx  Logo.tsx  LogoWithIcon.tsx  Navbar.tsx  ShimmerBadge.tsx  Sidebar.tsx  StaticTable.tsx  Svg.tsx  Tag.tsx  TechStack.tsx  Tools.tsx
src/constants/: about.tsx  icons.ts  logos.ts  menu.ts  motion.ts  pages.tsx  projectSections.ts  projects.ts  projects.tsx  status.ts
src/content/: about.md
src/data/: about.ts  colours.ts  icons.ts  projects.ts
src/hooks/: useOnScroll.tsx
src/lib/: utils.ts
src/libs/: utils.ts
src/pages/: index.astro  journal.astro
src/types/: about.ts  card.ts  collections.ts  core.ts  details.ts  global.ts  html.ts  projects.ts
(+134 files in other folders)
