[project]
name = "app"
version = "0.1.0"
description = ""
authors = [{ name = "Ryan Partridge", email = "rpartridge101@gmail.com" }]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "pydantic-settings (>=2.7.1,<3.0.0)",
    "fastapi[standard] (>=0.115.6,<0.116.0)",
    "logfire (>=3.2.0,<4.0.0)",
    "supabase (>=2.11.0,<3.0.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
run-dev = "scripts.run:development"
run-prod = "scripts.run:production"

[tool.pytest.ini_options]
addopts = "--cov-report term-missing --cov=backend tests/"

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
strict = true
cache_fine_grained = true
plugins = ['numpy.typing.mypy_plugin', 'pydantic.mypy']

[tool.isort]
profile = "black"

[tool.black]
line-length = 88
target-version = ['py312']

[tool.poetry.group.testing.dependencies]
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
black = "^24.10.0"
flake8 = "^7.1.1"
isort = "^5.13.2"
mypy = "^1.14.1"
flake8-docstrings = "^1.7.0"
flake8-bugbear = "^24.12.12"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
